// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment displays an image 1`] = `
<div
  data-stylename="comment"
>
  <div
    data-stylename="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      data-stylename="avatar"
      url="/c/foo/m/1"
    />
    <Link
      data-stylename="userName"
      replace={false}
      to="/c/foo/m/1"
    >
      Joe Smith
    </Link>
    <div
      data-stylename="upperRight"
    >
      <span
        data-stylename="timestamp"
      >
        just now
      </span>
    </div>
  </div>
  <a
    data-stylename="imageLink"
    href="foo.png"
    target="_blank"
  >
    <img
      data-stylename="image"
      src="foo.png"
    />
  </a>
</div>
`;

exports[`Comment displays the delete menu when deleteComment is defined 1`] = `
<div
  data-stylename="comment"
>
  <div
    data-stylename="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      data-stylename="avatar"
      url="/c/foo/m/1"
    />
    <Link
      data-stylename="userName"
      replace={false}
      to="/c/foo/m/1"
    >
      Joe Smith
    </Link>
    <div
      data-stylename="upperRight"
    >
      <span
        data-stylename="timestamp"
      >
        just now
      </span>
      <Dropdown
        data-stylename="dropdown"
        items={
          Array [
            Object {
              "icon": "Trash",
              "label": "Delete",
              "onClick": [Function],
            },
          ]
        }
        toggleChildren={
          <Icon
            name="More"
          />
        }
      />
    </div>
  </div>
  <Connect(ClickCatcher)>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>text of the comment</p>",
        }
      }
      data-stylename="text"
      id="text"
    />
  </Connect(ClickCatcher)>
</div>
`;

exports[`Comment displays the remove menu when removeComment is defined 1`] = `
<div
  data-stylename="comment"
>
  <div
    data-stylename="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      data-stylename="avatar"
      url="/c/foo/m/1"
    />
    <Link
      data-stylename="userName"
      replace={false}
      to="/c/foo/m/1"
    >
      Joe Smith
    </Link>
    <div
      data-stylename="upperRight"
    >
      <span
        data-stylename="timestamp"
      >
        just now
      </span>
      <Dropdown
        data-stylename="dropdown"
        items={
          Array [
            Object {
              "icon": "Trash",
              "label": "Remove",
              "onClick": [Function],
            },
          ]
        }
        toggleChildren={
          <Icon
            name="More"
          />
        }
      />
    </div>
  </div>
  <Connect(ClickCatcher)>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>text of the comment</p>",
        }
      }
      data-stylename="text"
      id="text"
    />
  </Connect(ClickCatcher)>
</div>
`;

exports[`Comment renders correctly 1`] = `
<div
  data-stylename="comment"
>
  <div
    data-stylename="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      data-stylename="avatar"
      url="/c/foo/m/1"
    />
    <Link
      data-stylename="userName"
      replace={false}
      to="/c/foo/m/1"
    >
      Joe Smith
    </Link>
    <div
      data-stylename="upperRight"
    >
      <span
        data-stylename="timestamp"
      >
        just now
      </span>
    </div>
  </div>
  <Connect(ClickCatcher)>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>text of the comment</p>",
        }
      }
      data-stylename="text"
      id="text"
    />
  </Connect(ClickCatcher)>
</div>
`;
